--- a/templates/base.html
+++ b/templates/base.html
@@ -295,38 +295,9 @@
 
                         {% if user.is_staff %}
 
+                            <li><a href="/bookings/">Browse Bookings</a></li>
+                            <li><a href="/admin/web/">Admin</a></li>
 
-
-                            <li class="sub-menu">
-                                <a href="javascript:;">
-                                    <i class="fa fa-laptop"></i>
-                                    <span>Update Bookings</span>
-                                </a>
-                                <ul class="sub">
-
-
-
-
-                                    <li><a href="/booking/assign/">Assign Tuner</a></li>
-                                    <li><a href="/booking/to_completed/">Mark Completed</a></li>
-                                    <li><a href="/booking/to_paid/">Payments</a></li>
-                                    <li><a href="/bookings/">Browse Bookings</a></li>
-                                </ul>
-                            </li>
-
-
-
-
-                            <li class="sub-menu">
-                                <a href="javascript:;">
-                                    <i class="fa fa-laptop"></i>
-                                    <span>Admin</span>
-                                </a>
-                                <ul class="sub">
-                                    <li><a href="/admin/web/client/">Clients</a></li>
-                                    <li><a href="/admin/web/tuner/">Tuners</a></li>
-                                </ul>
-                            </li>
 
                         {% endif %}
 
