fixing list from ajs

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,7 +2,7 @@
 
 {% block extra-head %}
     <style>
-    .errorlist {
+    .text-error li {
         list-style: none;
     }
     </style>
@@ -11,7 +11,7 @@
 
     <form class="form-signin" role="form" action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
 
-        <h2 class="form-signin-heading">Please sign in</h2>
+        <h2 class="form-signin-heading">Please sign in to Tune My Pianos</h2>
         <div class="login-wrap">
 
 
