--- a/templates/base.html
+++ b/templates/base.html
@@ -291,37 +291,35 @@
                     </li>
                     {% if user.is_authenticated %}
 
-                        <li><a href="/calendar/">Calendar</a></li>
+                        <li><a href="/calendar/"><i class="fa fa-calendar"></i><span>Calendar</span></a></li>
+                        <li><a href="/bookings/"><i class="fa fa-list-alt"></i><span>Browse Bookings</span></a></li>
 
                         {% if user.is_staff %}
 
-                            <li><a href="/bookings/">Browse Bookings</a></li>
-                            <li><a href="/admin/web/">Admin</a></li>
+                            <li><a href="/admin/web/"><i class="fa fa-edit"></i><span>Admin</span></a></li>
 
 
                         {% endif %}
 
-                        {% if user.is_booker %}
-
-                            <li><a href="/bookings/">Browse Bookings</a></li>
-
-                        {% endif %}
-
-                        {% if user.is_tuner %}
-
-                            <li><a href="/bookings/">Browse Bookings</a></li>
-
-                        {% endif %}
 
                     {% endif %}
 
 
-                    <li>
-                        <a href="login.html">
-                            <i class="fa fa-user"></i>
-                            <span>Login Page</span>
-                        </a>
-                    </li>
+                    {% if user.is_authenticated %}
+
+
+
+                        <li><a href="{% url "tuner-profile" user.id %}"><i class=" fa fa-suitcase"></i>Profile</a></li>
+                        <li><a href="http://en.gravatar.com"><i class="fa fa-cog"></i> Get a Gravatar</a></li>
+                        <li><a href="/logout/"><i class="fa fa-key"></i> Log Out</a></li>
+
+
+
+
+                    {%  else  %}
+                        <li><a href="/login/"><i class="fa fa-key"></i> Login</a></li>
+                    {%  endif %}
+
                 </ul>
             </div>
             <!-- sidebar menu end-->
@@ -436,12 +434,12 @@
     </script>
 
 <script id="log_list_template" type="x-tmpl-mustache">
-            <div class="row alert booking_status_{{ status }}">
+            <div class="row alert booking_status_{{ status }} hidden-sm">
 
-                 <div class="col-md-3">
-                     <span class="photo"><img alt="" src="{{ gravatar }}"></span>
+                 <div class="col-lg-2 ">
+                     <span class="photo"><img class="gravatar" alt="" src="{{ gravatar }}"></span>
                  </div>
-                 <div class="col-md-9">
+                 <div class="col-lg-10">
 
 
                     <a href="{{ booking_url }}">
