--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -101,7 +101,7 @@
 
 
 
-                    <aside class="col-lg-3">
+                    <div class="col-lg-3 hidden-md">
 
                         {%  if user.is_admin %}
 
@@ -134,16 +134,15 @@
 
 
                         {% endif %}
-                    </aside>
-                    <aside class="col-lg-9">
+                    </div>
+                    <div class="col-lg-9">
                         <div id="calendar" class="has-toolbar"></div>
-                    </aside>
+                    </div>
                 </div>
             </section>
         </div>
 
     </div>
-    <!-- TODO:option to hide bookings to easier to create new booking -->
 
     <!-- TODO:validation to prevent booking being created that does not have a studio -->
 
