--- a/web/static/css/tuning.css
+++ b/web/static/css/tuning.css
@@ -25,7 +25,7 @@ a.logo {
     background-color: #aec785;
 }
 .booking_status_4 {
-    background-color: #1fb5ac;
+    background-color: #7EBCD4;
         color: white;
 }
 
@@ -34,11 +34,11 @@ a.logo {
     color: white;
 }
 .booking_status_6 {
-    background-color: #7EBCD4;
+    background-color: #cdabff;
         color: white;
 }
 .booking_status_7 {
-    background-color: #7EBCD4;
+    background-color: #cdabff;
         color: white;
 }
 
@@ -54,14 +54,14 @@ tr.booking_status_0{
     background-color: rgba(250, 250, 250, 1);
 }
 tr.booking_status_1{
-    background-color: rgba(250, 190, 202, 0.49);
+    background-color: rgba(250, 190, 102, 0.49);
 }
 
 tr.booking_status_3{
     background-color: rgba(174, 199, 133, 0.52);
 }
 tr.booking_status_4{
-    background-color: rgba(31, 181, 172, 0.51);
+    background-color: rgba(126, 188, 212, 0.51);
 }
 
 tr.booking_status_5{
@@ -69,10 +69,10 @@ tr.booking_status_5{
 }
 
 tr.booking_status_6{
-    background-color: rgba(126, 188, 212, 0.46);
+    background-color: rgba(205, 171, 255, 0.46);
 }
 tr.booking_status_7{
-    background-color: rgba(126, 188, 212, 0.46);
+    background-color: rgba(205, 171, 255, 0.46);
 }
 
 tr.booking_status_8{
@@ -169,4 +169,9 @@ tr.booking_status_9{
         font-size: 18px;
     }
 
+}
+.gravatar  {
+    border-radius:50%;
+    -webkit-border-radius:50%;
+    width:33px;
 }
