--- a/templates/web/booking_editable_template.html
+++ b/templates/web/booking_editable_template.html
@@ -18,7 +18,7 @@
 </h3>
 <div id="editform" class="editable_content" data-eventid="">
 
-    {% if object.status >= '0' and object.status <= '3' %}
+    {% if object.status >= '0' %}
         <a href="#" id="field_tuner" class="editable tuners"
            data-pk="{{ object.ref }}"
            data-title="Tuner"
