sms seem to be working!!!!

--- a/templates/index_tuner.html
+++ b/templates/index_tuner.html
@@ -21,7 +21,7 @@
                 <span class="mini-stat-icon booking_status_1"><i class="fa booking_status_1_icon"></i></span>
                 <div class="mini-stat-info">
                     <span>{{ num_requested }}</span>
-                    New Booking Requests
+                    New Requests
                     <ul class="tasks-bar">
 
                         {%  for item in list_requested %}
