--- a/templates/pdf/invoice.html
+++ b/templates/pdf/invoice.html
@@ -4,18 +4,18 @@
     <style type="text/css">
         @page {
             size: {{ pagesize|default:"A4" }};
-            margin-left: 5.5cm;
+            margin-left: 2.5cm;
             margin-right: 2.5cm;
-            margin-top: 2.5cm;
+            margin-top: 8.5cm;
             margin-bottom: 2cm;
 
             @frame header {
-                -pdf-frame-content: page-header;
-                margin-top: 1.3cm;
-                margin-right: 2mm;
-                margin-bottom: 1cm;
-                margin-left: 1.2cm;
-            }
+        -pdf-frame-content: page-header;
+            margin-top: 1.3cm;
+            margin-right: 2mm;
+            margin-bottom: 1cm;
+            margin-left: 1.2cm;
+        }
         }
     </style>
 {% endblock %}
@@ -36,156 +36,139 @@
 
         }
 
-        table {
+        .item_name {
+            width: 70%;
+            padding-right: 20px;
+        }
+        .amount {
+            width: 30%;
+            text-align: right;
+        }
+        #invoice_detail table{
             line-height: 140%;
             margin-bottom: 20px;
         }
-            table.bordered {
-                border-top: 0.1pt solid #999999;
-                border-bottom: 0.1pt solid #999999;
-            }
+        #invoice_detail  table.bordered {
+            border-top: 0.1pt solid #999999;
+            border-bottom: 0.1pt solid #999999;
+        }
 
-            tr, td, th { border: none; }
+        tr, td, th { border: none; }
 
-            th {
-                font-size: 10pt;
-                border-bottom: 0.1pt solid #999999;
-                padding: 3px 0;
-                line-height: 1;
-                font-weight: bold;
-            }
+        th {
 
-            td {
-                font-size: 10pt;
+            border-bottom: 0.1pt solid #999999;
+            padding: 3px 0;
+            line-height: 1;
+            font-weight: bold;
+        }
 
-                vertical-align: top;
-                padding: 3px 0;
-            }
+        td {
 
-            td:last-child { padding-bottom: 0; }
+            vertical-align: top;
+            padding: 3px 0;
+        }
+
+        td:last-child { padding-bottom: 0; }
 
         .text-left { text-align: left; }
         .text-right { text-align: right; }
-        .bottom-10 { margin-bottom: 10px; }
-        .bottom-20 { margin-bottom: 20px; }
+        .text-center { text-align: center; }
 
-        .header { color: #7f7f7f; }
-        .header p { font-size: 13px; line-height: 1.5em; }
-        .header-link { font-weight: bold; text-decoration: none; color: #4F81BD; font-size: 14px; }
-        .logo { margin-bottom: 20px; margin-left: -25px; }
-        .logo img { zoom: 60%; }
-
-        .recipient { margin-left: 7cm; }
-
-        .main h1 {
-            margin: 18px 0 18px 0;
-            font-size: 250%;
-            font-weight: normal;
-            color: #4F81BD;
-        }
-
-        .main h2 {
-            margin: 18px 0 6px 0;
-            font-size: 180%;
-            font-weight: normal;
-        }
-
-        .info { border: 1px solid #4F81BD; padding: 10px; margin-top: 50px; margin-bottom: 50px; }
-        .info a { color: #4F81BD; text-decoration: none; }
 
     </style>
 {% endblock %}
 
 {%block page_header%}
     <div id="page-header">
-        <div class="header">
+        <div class="header text-center">
             <h1>Thornhill Music Limited</h1>
             <p>
-42 Whittlesford Road<br />
-Newton,<br />
+                42 Whittlesford Road<br />
+                Newton,<br />
                 Cambridgeshire<br />
                 CB22 7PH<br />
                 Tel & Fax: 020-7275 0888<br />
-Mobile: 07973-843189<br />
-e-mail: alexanderskeaping@mac.com
+                Mobile: 07973-843189<br />
+                e-mail: alexanderskeaping@mac.com
             </p>
-            <p class="header-link">
-                <a class="header-link" href="http://en.ig.ma/">en.ig.ma</a>
-            </p>
+
+
         </div>
+
     </div>
 {% endblock %}
 
 {% block content %}
     <div id="content">
-        <div class="recipient bottom-10">
-            <p class="bottom-10">
-                <strong>ACME Inc.</strong>
-                <br> John Doe
-            </p>
-            <p class="bottom-10">
-                Street Name <br>
-                Postal Code <br/>
-                City
-            </p>
-            <p>{{ today|date:"DATETIME_FORMAT" }} UTC</p>
-        </div>
+
+      <table><tr>
+            <td class="text-left">
+                <p>{{ booking.client.name }}</p>
+                <p>{{ booking.client.address }}</p>
+                <p>{{ booking.booker }}</p>
+            </td>
+
+            <td class="text-right">
+                <p>Invoice Date: {{ booking.completed_at|date:"DATE_FORMAT" }}</p>
+                <p>Invoice Ref: {{ booking.ref }}</p>
+            </td>
+        </tr></table>
+
+
+        <p>Actvitiy:{{ booking.activity.name_verb_past }} {{ booking.instrument }}</p>
+        <p>Location: {{ booking.studio }}</p>
+        <p>Tuner: {{ booking.tuner }}</p>
 
 
         <p class="info">
-            This is an example of <a href="https://github.com/nigma/django-easy-pdf">django-easy-pdf</a>
-            &ndash; Django PDF rendering the easy way.
-            Check <a href="http://en.ig.ma/">en.ig.ma</a> for Django and Python development.
+
         </p>
 
         <div class="main">
-            <h1>Sample Invoice</h1>
+            <h2>To: Provision of the following services:</h2>
 
-            <table class="bordered bottom-20">
+
+            <table id="invoice_detail" class="bordered bottom-20">
                 <tr>
-                    <td class="item-name"><strong>Invoice Ref: {{ booking.ref }}</strong></td>
-                    <td><strong>{{ today|date:"y/m/d/1" }}</strong></td>
+                    <td class="item-name">{{ booking.description }} </td>
+                    <td class="amount">{{ booking.price }}</td>
                 </tr>
                 <tr>
-                    <td class="item-name">Amount</td>
-                    <td><strong>100 Doge</strong></td>
+                    <td class="item-name">VAT</td>
+                    <td class="amount">{{ booking.vat }}</td>
                 </tr>
-            </table>
-
-            <table>
-                <thead>
-                    <tr>
-                        <th class="text-left">Description</th>
-                        <th class="text-right">Amount</th>
-                        <th class="text-right">Tax</th>
-                        <th class="text-right">Total</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="text-left">Some stuff</td>
-                        <td class="text-right">100 Doge</td>
-                        <td class="text-right">0</td>
-                        <td class="text-right">100 Doge</td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <table class="bottom-20">
-                <tr>
-                    <td><strong>Total</strong></td>
-                    <td class="text-right"><strong>100 Doge</strong></td>
+                 <tr>
+                    <td class="item-name">Total</td>
+                    <td class="amount">{{ booking.total }}</td>
                 </tr>
             </table>
 
-            <h2>Payment details</h2>
 
-            <p class="bottom-20">
-                Please cover the invoice within 10 days.
-            </p>
 
-            <p>Dogecoin address (it's real): <strong>DREWeqR5KB2rbpJFybKvWepNs6sUQZowNs</strong></p>
-            <pdf:barcode value="DREWeqR5KB2rbpJFybKvWepNs6sUQZowNs" type="qr" barwidth="100" barheight="100" />
-        </div>
-    </div>
+            <h2> With compliments</h2>
+
+
+
+<p>Terms: nett 30 days</p>
+
+<p>Internet Banking Details: Barclays Bank PLC Sort Code: 20-29-90 a/c no: 43018393</p>
+
+
+
+
+{% endblock %}
+
+ {%block page_foot%}
+            <table><tr>
+                <td class="text-left">
+                    Thornhill Music Limited: Registered in London No 1933176 <br />
+                    Registered Office 8 – 10 South Street Epsom Surrey KT18 7PF
+                </td>
+                <td class="text-right">
+                    Directors: A. J. Skeaping, F. M. Skeaping<br />
+                    VAT Registration No: 438 8018 34
+                </td>
+            </tr></table>
+
 {% endblock %}
