invoice displays except for font

--- a/templates/easy_pdf/base.html
+++ b/templates/easy_pdf/base.html
@@ -28,10 +28,12 @@
 
                     @frame footer {
                         -pdf-frame-content: page-footer;
+
                         bottom: 0cm;
                         margin-left: 1cm;
                         margin-right: 1cm;
-                        height: 1cm;
+                        height: 4cm;
+                        top: 15cm;
                     }
                 }
             </style>
