--- a/templates/web/booking_editable_template.html
+++ b/templates/web/booking_editable_template.html
@@ -18,6 +18,8 @@
 </h3>
 <div id="editform" class="editable_content" data-eventid="">
 
+<div id="booking_description">
+
     {% if object.status >= '0' %}
         <a href="#" id="field_tuner" class="editable tuners"
            data-pk="{{ object.ref }}"
@@ -96,7 +98,7 @@
 
 
 
-
+</div>
 
 <span id="button_row" class="pull-right">
 
