--- a/templates/web/booking_editable_template_tuner.html
+++ b/templates/web/booking_editable_template_tuner.html
@@ -17,10 +17,8 @@
     )
 </h3>
 <div id="editform" class="editable_content" data-eventid="">
-
-    NOT USED - tuner cannot edit, so booking description is put in here in load_data function
-
-</div>
+    <div id="booking_description">
+        NOT USED - tuner cannot edit, so booking description is put in here in load_data function
 
 
 <span id="button_row" class="pull-right">
@@ -34,6 +32,10 @@
 
 </span>
 
+
+    </div>
+
+</div>
 
 
 
